# uefi-os-rust

./: Cargo.toml  run.sh
.cargo/: config.toml
src/: main.rs
